<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrey"
        tools:context=".login.MainActivity">


        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="170dp"
            android:layout_height="151dp"
            android:layout_marginTop="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_person_pin_24" />

        <TextView
            android:id="@+id/textViewTitleLogin"
            android:layout_width="280dp"
            android:layout_height="93dp"
            android:layout_marginTop="2dp"
            android:text="@string/inicia_sessi_amb_el_teu_usuari"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="149dp"
            android:layout_height="54dp"
            android:layout_marginTop="42dp"
            android:text="@string/iniciar_sessio"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textViewRegistre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textColor="@color/blue"
            android:text="@string/no_tens_compte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom_d_usuari"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleLogin" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrasenya"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>