<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:background="@color/lightGrey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.MainActivity">


        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="170dp"
            android:layout_height="151dp"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_person_pin_24" />

        <TextView
            android:id="@+id/textViewTitleRegistre"
            android:layout_width="280dp"
            android:layout_height="93dp"
            android:layout_marginTop="2dp"
            android:text="@string/registra_t_per_poder_accedir"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

        <Button
            android:id="@+id/buttonRegistre"
            android:layout_width="149dp"
            android:layout_height="54dp"
            android:layout_marginTop="42dp"
            android:text="@string/registrar_se"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/ja_tens_un_compte"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegistre" />

        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom_d_usuari"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleRegistre" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrasenya"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>